--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,11 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()
+        maven {
+            url 'https://jitpack.io'
+            credentials { username authToken }
+        }
     }
 }
 
