--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -65,6 +65,10 @@ ext {
             daggerProcessor:            "com.google.dagger:dagger-android-processor:$dagger_version",
             validator:                  "com.github.Ilhasoft:data-binding-validator:$validator_version",
 
+            gizminDesign:               "com.github.CaioHAndradeLima:DesignHelper:3.0.6",
+            datePickerLibrary:          "com.afollestad:date-picker:0.6.1",
+            BottomDatePickerLibrary:    "com.github.florent37:singledateandtimepicker:2.1.4",
+
             //serializable and deserializable
             gson :                      "com.google.code.gson:gson:2.8.5",
 
@@ -88,9 +92,11 @@ ext {
     ]
 
     integrationTesting = [
-
-            runner:     "com.android.support.test:runner:$runner_version",
-            espresso:   "com.android.support.test.espresso:espresso-core:$espresso_version"
+            support:    "com.android.support:support-annotations:28.0.0",
+            runner:     "com.android.support.test:runner:1.0.2",
+            espresso:   "com.android.support.test.espresso:espresso-core:3.1.0",
+            rules:      "com.android.support.test:rules:1.0.2",
+            uiautomator: "com.android.support.test.uiautomator:uiautomator-v18:2.1.2"
     ]
 
 }
