Create local database and first unit test

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':networking', ':apipoke', ':core', ':designsystem'
+include ':app', ':networking', ':apipoke', ':core', ':designsystem', ':localdatabase'
