--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -88,7 +88,9 @@ ext {
             roomTesting:    "androidx.room:room-testing:$archComponents_version",
             archTesting:    "androidx.arch.core:core-testing:$archComponents_version",
             mockito:        "com.nhaarman:mockito-kotlin:$mockito_version",
-            robolectric:     "org.robolectric:robolectric:$roboletric_version"
+            robolectric:    "org.robolectric:robolectric:$roboletric_version",
+            mockk:          "io.mockk:mockk:1.9.3"
+
     ]
 
     integrationTesting = [
